# StudyTemplate

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
messenger/: __main__.py
messenger/application/: app.py
messenger/application/api/: __init__.py  root.py
messenger/db/: base.py
messenger/modules/: config.py
messenger/schemas/: users.py
